force-app/main/default/objects/Passageiro__c/Passageiro__c.object-meta.xml
<CustomObject>
    <label>Passageiro</label>
    <nameField>
        <displayFormat>P-{000000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passageiros</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>