force-app/main/default/objects/Passageiro__c/fields/Bagagem__c.field-meta.xml
<CustomField>
    <fullName>Bagagem__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bagagem (Kg)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>