force-app/main/default/objects/Passageiro__c/fields/Briefing__c.field-meta.xml
<CustomField>
    <fullName>Briefing__c</fullName>
    <label>Briefing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Realizado</fullName>
                <default>true</default>
                <label>Não Realizado</label>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Presencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>