force-app/main/default/objects/Passageiro__c/fields/CheckIn__c.field-meta.xml
<CustomField>
    <fullName>CheckIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Passageiro fez check in?</description>
    <inlineHelpText>Passageiro fez check in?</inlineHelpText>
    <label>Check In</label>
    <type>Checkbox</type>
</CustomField>