force-app/main/default/objects/Passageiro__c/fields/ClienteVoo__c.field-meta.xml
<CustomField>
    <fullName>ClienteVoo__c</fullName>
    <formula>Trecho__r.Voo__r.Cliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ClienteVoo</label>
    <type>Text</type>
</CustomField>