force-app/main/default/objects/Passageiro__c/fields/CodigoBriefing__c.field-meta.xml
<CustomField>
    <fullName>CodigoBriefing__c</fullName>
    <label>Codigo do Briefing</label>
    <type>TextArea</type>
</CustomField>