force-app/main/default/objects/Passageiro__c/fields/CodigoReserva__c.field-meta.xml
<CustomField>
    <fullName>CodigoReserva__c</fullName>
    <label>Código da Reserva</label>
    <length>10</length>
    <type>Text</type>
</CustomField>