force-app/main/default/objects/Passageiro__c/fields/DataBriefing__c.field-meta.xml
<CustomField>
    <fullName>DataBriefing__c</fullName>
    <label>Data briefing</label>
    <type>DateTime</type>
</CustomField>