force-app/main/default/objects/Passageiro__c/fields/DataVooDate__c.field-meta.xml
<CustomField>
    <fullName>DataVooDate__c</fullName>
    <formula>DATEVALUE(DataVoo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data voo</label>
    <type>Date</type>
</CustomField>