force-app/main/default/objects/Passageiro__c/fields/Destino__c.field-meta.xml
<CustomField>
    <fullName>Destino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destino</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Passageiros (Destino)</relationshipLabel>
    <relationshipName>PassageirosDestino</relationshipName>
    <type>Lookup</type>
</CustomField>