force-app/main/default/objects/Passageiro__c/fields/DestinoFinal__c.field-meta.xml
<CustomField>
    <fullName>DestinoFinal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trecho Destino</label>
    <referenceTo>Trecho__c</referenceTo>
    <relationshipLabel>Passageiros (Trecho Destino)</relationshipLabel>
    <relationshipName>PassageirosDestinoFInal</relationshipName>
    <type>Lookup</type>
</CustomField>