force-app/main/default/objects/Passageiro__c/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <formula>TEXT(Contato__r.TipoDocumento__c)+&apos; &apos;+SUBSTITUTE(SUBSTITUTE(Contato__r.NumeroDocumento__c, &quot;.&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documento</label>
    <type>Text</type>
</CustomField>