force-app/main/default/objects/Passageiro__c/fields/DocumentoUtilizado__c.field-meta.xml
<CustomField>
    <fullName>DocumentoUtilizado__c</fullName>
    <label>Documento Utilizado</label>
    <type>TextArea</type>
</CustomField>