force-app/main/default/objects/Passageiro__c/fields/EmailEnviado__c.field-meta.xml
<CustomField>
    <fullName>EmailEnviado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Usado como flag para saber se o passageiro já recebeu o email.</description>
    <label>Email Enviado</label>
    <type>Checkbox</type>
</CustomField>