force-app/main/default/objects/Passageiro__c/fields/Embarcando__c.field-meta.xml
<CustomField>
    <fullName>Embarcando__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Embarcando</label>
    <type>Checkbox</type>
</CustomField>