force-app/main/default/objects/Passageiro__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <description>Replica o Nome da Conta</description>
    <formula>Contato__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Replica o Nome da Conta</inlineHelpText>
    <label>Empresa</label>
    <type>Text</type>
</CustomField>