force-app/main/default/objects/Passageiro__c/fields/Excluido__c.field-meta.xml
<CustomField>
    <fullName>Excluido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelado?</label>
    <type>Checkbox</type>
</CustomField>