force-app/main/default/objects/Passageiro__c/fields/HoraCheckin__c.field-meta.xml
<CustomField>
    <fullName>HoraCheckin__c</fullName>
    <label>Hora Checkin</label>
    <type>DateTime</type>
</CustomField>