force-app/main/default/objects/Passageiro__c/fields/IdVoo__c.field-meta.xml
<CustomField>
    <fullName>IdVoo__c</fullName>
    <description>Replica o Id do Voo em que o passageiro estará presente</description>
    <formula>CASESAFEID(Trecho__r.Voo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Replica o Id do Voo em que o passageiro estará presente</inlineHelpText>
    <label>Id do Voo</label>
    <type>Text</type>
</CustomField>