force-app/main/default/objects/Passageiro__c/fields/NomeContato__c.field-meta.xml
<CustomField>
    <fullName>NomeContato__c</fullName>
    <formula>Contato__r.FirstName&amp;&quot; &quot;&amp;Contato__r.LastName</formula>
    <label>Nome</label>
    <type>Text</type>
</CustomField>