force-app/main/default/objects/Passageiro__c/fields/NoShow__c.field-meta.xml
<CustomField>
    <fullName>NoShow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado se faltou ao Check In</description>
    <inlineHelpText>Faltou ao Check In?</inlineHelpText>
    <label>No Show</label>
    <type>Checkbox</type>
</CustomField>