force-app/main/default/objects/Passageiro__c/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <label>Peso (kg)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>