force-app/main/default/objects/Passageiro__c/fields/QRCode__c.field-meta.xml
<CustomField>
    <fullName>QRCode__c</fullName>
    <formula>IMAGE(&quot;https://quickchart.io/qr?size=177&amp;text=&quot; + Id, &quot;QR Code - Scan This&quot;)</formula>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>