force-app/main/default/objects/Passageiro__c/fields/QtdBagagem__c.field-meta.xml
<CustomField>
    <fullName>QtdBagagem__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bagagem (Qtd)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>