force-app/main/default/objects/Passageiro__c/fields/QtdCarga__c.field-meta.xml
<CustomField>
    <fullName>QtdCarga__c</fullName>
    <label>Carga (Qtd)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>