force-app/main/default/objects/Passageiro__c/fields/StatusVoo__c.field-meta.xml
<CustomField>
    <fullName>StatusVoo__c</fullName>
    <description>Replica o status do voo em passageiro</description>
    <formula>Trecho__r.StatusVoo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Replica o status do voo em passageiro</inlineHelpText>
    <label>Status do Voo</label>
    <type>Text</type>
</CustomField>