force-app/main/default/objects/Passageiro__c/fields/TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>TipoDocumento__c</fullName>
    <label>Tipo do documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoDocumento</valueSetName>
    </valueSet>
</CustomField>