force-app/main/default/objects/Passageiro__c/fields/Transferido__c.field-meta.xml
<CustomField>
    <fullName>Transferido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado quando o Passageiro foi transferido por algum motivo especial e não por No-Show</description>
    <inlineHelpText>Marcado quando o Passageiro foi transferido por algum motivo especial e não por No-Show</inlineHelpText>
    <label>Transferido</label>
    <type>Checkbox</type>
</CustomField>