force-app/main/default/objects/Passageiro__c/fields/TransferidoParaVoo__c.field-meta.xml
<CustomField>
    <fullName>TransferidoParaVoo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferido para</label>
    <referenceTo>Voo__c</referenceTo>
    <relationshipLabel>TransferidoParaVoo</relationshipLabel>
    <relationshipName>Passageiros</relationshipName>
    <type>Lookup</type>
</CustomField>