force-app/main/default/objects/Passageiro__c/fields/Trecho__c.field-meta.xml
<CustomField>
    <fullName>Trecho__c</fullName>
    <label>Trecho</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Trecho__c.Status__c</field>
            <operation>equals</operation>
            <value>Não Iniciado</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Trecho__c</referenceTo>
    <relationshipLabel>Passageiros</relationshipLabel>
    <relationshipName>Passageiros</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>