force-app/main/default/objects/Passageiro__c/validationRules/CheckinSemPesos.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckinSemPesos</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(CheckIn__c) ,
CheckIn__c,
OR(
OR(Peso__c &lt;= 0, ISNULL(Peso__c), ISBLANK(Peso__c)),
AND(Bagagem__c &gt; 0, QtdBagagem__c &lt;= 0),
AND(QtdBagagem__c &gt; 0,Bagagem__c&lt;= 0)
)
)</errorConditionFormula>
    <errorDisplayField>CheckIn__c</errorDisplayField>
    <errorMessage>Preencha os dados de peso e bagagem</errorMessage>
</ValidationRule>