force-app/main/default/objects/Passageiro__c/validationRules/DataBriefing.validationRule-meta.xml
<ValidationRule>
    <fullName>DataBriefing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Briefing__c) == &apos;Não Realizado&apos;,
ISCHANGED(Briefing__c), 
NOT(ISNULL(DataBriefing__c)))</errorConditionFormula>
    <errorDisplayField>DataBriefing__c</errorDisplayField>
    <errorMessage>Limpe os dados de data briefing</errorMessage>
</ValidationRule>