force-app/main/default/objects/Passageiro__c/validationRules/NoSHOWcomPesos.validationRule-meta.xml
<ValidationRule>
    <fullName>NoSHOWcomPesos</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(NoShow__c),
NoShow__c,
OR(
Peso__c &gt; 0,
Bagagem__c &gt; 0, 
QtdBagagem__c&gt; 0))</errorConditionFormula>
    <errorDisplayField>NoShow__c</errorDisplayField>
    <errorMessage>Limpe os dados de peso e bagagem</errorMessage>
</ValidationRule>