force-app/main/default/objects/Passageiro__c/validationRules/PassageiroSemQuantidade.validationRule-meta.xml
<ValidationRule>
    <fullName>PassageiroSemQuantidade</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
CheckIn__c, 
ISBLANK(Peso__c),
TEXT(Trecho__r.StatusAtendimento__c) == &apos;Pesagem Finalizada&apos;
)</errorConditionFormula>
    <errorDisplayField>Peso__c</errorDisplayField>
    <errorMessage>Preencha o peso.</errorMessage>
</ValidationRule>