force-app/main/default/objects/Passageiro__c/validationRules/PreenchaDataBriefing.validationRule-meta.xml
<ValidationRule>
    <fullName>PreenchaDataBriefing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Briefing__c) != &apos;Não Realizado&apos;,
ISCHANGED(Briefing__c), 
 ISNULL(DataBriefing__c))</errorConditionFormula>
    <errorDisplayField>Briefing__c</errorDisplayField>
    <errorMessage>Preencha a Data do Briefing</errorMessage>
</ValidationRule>