force-app/main/default/objects/Passageiro__c/validationRules/PreenchaParaTransferir.validationRule-meta.xml
<ValidationRule>
    <fullName>PreenchaParaTransferir</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(Transferido__c), 
Transferido__c,
OR(
ISBLANK(Peso__c),
ISBLANK( Bagagem__c ), 
ISBLANK(  QtdBagagem__c )))</errorConditionFormula>
    <errorMessage>Preencha os dados de peso e bagagem</errorMessage>
</ValidationRule>